# clinical-data-common

./: .gitattributes  LICENCE.md  Makefile  README.md  project.code-workspace  pyproject.toml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cicd-1-pull-request.yaml  stage-2-test.yaml
docs/: CONTRIBUTING.md
scripts/config/vale/styles/config/vocabularies/words/: accept.txt
scripts/githooks/: check-markdown-format.sh
scripts/tests/: unit.sh
src/clinical_data_common/: __init__.py  greeting.py  test_greeting.py
tests/: __init__.py  test_greeting.py
